kustomize-guestbook/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: guestbook-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /guestbook
        pathType: Prefix
        backend:
          service:
            # Use "guestbook-ui" here - kustomize namePrefix will transform it to "kustomize-guestbook-ui"
            name: guestbook-ui
            port:
              number: 80
